implemented basic DocumentRef

--- a/config/property_types.yml
+++ b/config/property_types.yml
@@ -14,5 +14,5 @@
   name: "Date"
   ruby_type: "Date"
 "/base/ref": 
-  value: "Other document"
+  name: "Other document"
   ruby_type: "DocumentRef"
