created a fron page menu with AJAX, modified the design, added logo, fixed namespace editing, added extractor translate option

--- a/config/config.yml
+++ b/config/config.yml
@@ -4,4 +4,4 @@ development:
   
 production:
   google_maps_api: AIzaSyC_5o2n6KuvAzPrQzQ5DAwpmRuyqKoNR8k
-  domain: http://allus.in
+  domain: http://allus.in/
